# Auto-Abaqus-Agent-Research

./: .coderabbit.yaml  .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  host_bridge.py  pyproject.toml  requirements.txt
.gemini/: config.yaml
.github/: copilot-instructions.md
.github/instructions/: docker-infra.instructions.md  frontend.instructions.md  python-backend.instructions.md
.github/workflows/: install-smoke.yml  parser-regression.yml  pr-review.yml  security-scan.yml
Auto-claude-code-research-in-sleep-main/: README.md  temp_text.txt
Auto-claude-code-research-in-sleep-main/Auto-claude-code-research-in-sleep-main/: README_CN.md
Auto-claude-code-research-in-sleep-main/Auto-claude-code-research-in-sleep-main/skills/paper-writing/: SKILL.md
Auto-claude-code-research-in-sleep-main/tools/: smart_update.ps1
abaqusgpt/: __init__.py  cli.py  config.py
abaqusgpt/agents/: __init__.py  converge_doctor.py  domain_expert.py  inp_generator.py  mesh_advisor.py  qa_agent.py
abaqusgpt/knowledge/: __init__.py  element_library.py  error_codes.py
abaqusgpt/knowledge/domains/: __init__.py
abaqusgpt/llm/: __init__.py  client.py
abaqusgpt/parsers/: __init__.py  inp_parser.py  msg_parser.py  sta_parser.py
abaqusgpt/skills/: __init__.py  base.py  loader.py
abaqusgpt/skills/converge_doctor/: SKILL.md  __init__.py
abaqusgpt/skills/domain_expert/: SKILL.md  __init__.py
abaqusgpt/skills/geotech_boundary/: SKILL.md  __init__.py
abaqusgpt/skills/geotech_constitutive/: SKILL.md  __init__.py
abaqusgpt/skills/geotech_excavation/: SKILL.md  __init__.py
abaqusgpt/skills/geotech_interface/: SKILL.md  __init__.py
abaqusgpt/skills/geotech_mesh/: SKILL.md  __init__.py
abaqusgpt/skills/geotech_seepage/: SKILL.md  __init__.py
abaqusgpt/skills/inp_generator/: SKILL.md  __init__.py
abaqusgpt/skills/mesh_advisor/: SKILL.md  __init__.py
abaqusgpt/skills/shared_references/: README.md  convergence-criteria.md  element-catalog.md  error-patterns.md  mesh-guidelines.md
abaqusgpt/utils/: __init__.py  checkpoint.py  manifest.py  state.py  versioning.py
abaqusgpt/workflows/: __init__.py  definitions.py  engine.py
docs/: AI_PR_REVIEW_SETUP.md  ARCHITECTURE_PROPOSAL.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ConversationSidebar.tsx  DomainSelector.tsx  Layout.tsx  ModelSelector.tsx  ProviderSettings.tsx
frontend/src/pages/: ChatPage.tsx  DiagnosePage.tsx  GeneratePage.tsx  KnowledgePage.tsx  MonitorPage.tsx
knowledge_base/abaqus_docs/: .gitkeep
knowledge_base/best_practices/: README.md  contact.md  convergence.md  materials.md  meshing.md  output.md
knowledge_base/error_database/: .gitkeep
knowledge_base/examples/: .gitkeep
scripts/: pr_review.py  test_llm_connectivity.py
server/: __init__.py  main.py
server/api/v1/: __init__.py  chat.py  conversations.py  diagnose.py  generate.py  knowledge.py  mesh.py  models.py  providers.py  workspace.py
server/core/: __init__.py  config.py
tests/: __init__.py  test_parsers.py
