[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abaqusgpt"
version = "0.2.0"
description = "Your AI copilot for Abaqus: modeling, meshing, convergence debugging, and beyond."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ZhouChuange" }
]
keywords = [
    "abaqus",
    "fea",
    "finite-element",
    "simulation",
    "convergence",
    "ai",
    "llm",
    "agent"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.8.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
rag = [
    "llama-index>=0.10.0",
    "chromadb>=0.4.0",
]

[project.scripts]
abaqusgpt = "abaqusgpt.cli:app"

[project.urls]
Homepage = "https://github.com/ZhouChuange/AbaqusGPT"
Repository = "https://github.com/ZhouChuange/AbaqusGPT"
Issues = "https://github.com/ZhouChuange/AbaqusGPT/issues"

[tool.hatch.build.targets.wheel]
packages = ["abaqusgpt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=abaqusgpt"
